# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-02-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cowboy content types integration for 0.8.0

2013-02-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Remove misultin integration due to its usage of parameterized modules
    * Update cloudi_service_http_cowboy with better cowboy integration
    * Update cowboy dependency to 0.8.0
    * Add ranch 0.6.1 dependency for cowboy
    * Update rebar to 2.1.0-pre
    * Fix for services restart on failure

2013-02-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add quick start guide to doc/README.markdown
    * Change the configuration to use ZeroMQ version 3 by default

2013-02-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix erlzmq2 based on recent changes by adding the
      {active_pid, pid()} option to erlzmq2:socket/2
      (to fix cloudi_service_zeromq.erl after recent changes)
    * Change internal service code to utilize the single dispatcher
      Erlang process with temporary Erlang processes for
      service requests and info messages
      (so only 1 long-lived Erlang process used by
       internal services instead of 2)
    * Moved common internal service code to
      lib/cloudi_core/src/cloudi_services_common.erl
    * Changed the service code to have better filename scoping and
      better info message scoping
      (so internal service info messages will not be accidentally
       used by modules implementing a cloudi_service behavior)
    * Fix cloudi_core OTP application dependencies

2013-02-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service timeout usage bugs so that the
      timeout is more accurate
    * Change cloudi_service:recv_async functions to always return the
      ResponseInfo data (even if <<>>) and return the TransId, so that the
      behavior is consistent with the external CloudI API usage